--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-/* Reset and General Styles */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     font-family: 'Rubik', sans-serif;
     margin: 0;
     padding: 0;
@@ -15,95 +13,111 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-  }
-  
-  header {
+}
+
+header {
     background-color: #fff;
     padding: 1em 0;
     box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.1);
-  }
-  
-  nav {
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10%;
-  }
-  
-  .logo {
+}
+
+.logo {
     width: 6.25rem;
-  }
-  
-  .links-nav ul {
+}
+
+.links-nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row-reverse;
-  }
-  
-  .links-nav ul li {
+}
+
+.links-nav ul li {
     margin-left: 1.25rem;
-  }
-  
-  .links-nav ul li a {
+}
+
+.links-nav ul li a {
     color: #333;
     text-decoration: none;
-  }
-  
-  main {
-    flex: 1;
-    padding: 2em 10%;
-  }
-  
-  .hero {
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  padding: 2em 10% 0.8em 10%;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  height: 100%;
+}
+
+.main-content {
+  margin: auto;
+}
+
+
+.hero {
     background-color: #f9f9f9;
-    padding: 3.125em;
+    padding: 1em;
     text-align: center;
-  }
-  
-  .hero h1 {
+}
+
+.hero h1 {
     font-size: 2em;
     margin-bottom: 1.25em;
-  }
-  
-  .hero p {
+}
+
+.hero p {
     font-size: 1.25em;
     color: #666;
-  }
-  
-  .sort-bar {
-    margin-bottom: 1.25em;
+}
+
+.sort-bar {
+    margin: 1em 0;
     text-align: right;
-  }
-  
-  table {
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
     background-color: #fff;
     box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.1);
-  }
-  
-  th, td {
+}
+
+th,
+td {
     padding: 0.75em;
     text-align: right;
     border-bottom: 0.0625em solid #e1e5eb;
-  }
-  
-  th {
+}
+
+th {
     font-weight: bold;
-  }
-  
-  footer {
+}
+
+footer {
     background-color: #fff;
     color: #888;
     text-align: center;
     padding: 0.625em 0;
     box-shadow: 0 -0.2em 0.4em rgba(0, 0, 0, 0.1);
     margin-top: auto;
-  }
-  
-  .popup {
+}
+
+.popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -115,9 +129,9 @@
     align-items: center;
     z-index: 999;
     display: none;
-  }
-  
-  .popup-content {
+}
+
+.popup-content {
     background-color: #fff;
     padding: 2.5em;
     border-radius: 0.375em;
@@ -125,39 +139,39 @@
     width: 90%;
     text-align: center;
     position: relative;
-  }
-  
-  .popup-content h2 {
+}
+
+.popup-content h2 {
     font-size: 1.5em;
     margin-bottom: 1.25em;
-  }
-  
-  .popup-content form {
+}
+
+.popup-content form {
     display: flex;
     flex-direction: column;
-  }
-  
-  .popup-content form input {
+}
+
+.popup-content form input {
     margin-bottom: 0.625em;
     padding: 0.625em;
     border: 0.0625em solid #ccc;
     border-radius: 0.25em;
-  }
-  
-  .popup-content form button {
+}
+
+.popup-content form button {
     padding: 0.625em 1.25em;
     background-color: #333;
     color: #fff;
     border: none;
     border-radius: 0.25em;
     cursor: pointer;
-  }
-  
-  .popup-content form button:hover {
+}
+
+.popup-content form button:hover {
     background-color: #555;
-  }
-  
-  .close-popup {
+}
+
+.close-popup {
     position: absolute;
     top: 0.625em;
     right: 0.625em;
@@ -165,56 +179,38 @@
     text-decoration: none;
     font-size: 1.25em;
     z-index: 1;
-  }
-  
-  
-  .popup {
-    /* Existing styles */
-    display: none;
-  }
-  
-  .close-popup {
-    position: absolute;
-    top: 0.625em;
-    right: 0.625em;
-    color: #888;
-    text-decoration: none;
-    font-size: 1.25em;
-  }
-  
-  
-  /* Existing CSS styles */
-  
-  .subscribe-section {
+}
+
+.subscribe-section {
     background-color: #f9f9f9;
-    padding: 1.25em;
-    margin-top: 1.25em;
+    padding: 0.8em;
+    margin-top: 0.8em;
     border-radius: 0.375em;
     text-align: center;
-  }
-  
-  .subscribe-section h2 {
+}
+
+.subscribe-section h2 {
     font-size: 1.5em;
-    margin-bottom: 0.625em;
+    margin-bottom: 0.5em;
     color: #333;
-  }
-  
-  #subscribe-form {
+}
+
+#subscribe-form {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1.25em;
-  }
-  
-  #subscribe-form input[type="email"] {
+    margin-top: 0.5em;
+}
+
+#subscribe-form input[type="email"] {
     padding: 0.75em;
     border: none;
     border-radius: 0.25em;
     width: 18.75em;
     margin-right: 0.625em;
-  }
-  
-  #subscribe-form button {
+}
+
+#subscribe-form button {
     padding: 0.75em 1.5em;
     background-color: #333;
     color: #fff;
@@ -222,35 +218,35 @@
     border-radius: 0.25em;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  #subscribe-form button:hover {
+}
+
+#subscribe-form button:hover {
     background-color: #555;
-  }
-  
-  .sort-bar label {
+}
+
+.sort-bar label {
     color: #333;
     margin-right: 0.625em;
-  }
-  
-  #sort-select {
+}
+
+#sort-select {
     padding: 0.625em;
     border: 0.0625em solid #ccc;
     border-radius: 0.25em;
-  }
-  
-  .add-review-section {
+}
+
+.add-review-section {
     text-align: center;
-    margin-top: 1.25em;
-  }
-  
-  .add-review-section h2 {
+    margin-top: 1.5em;
+}
+
+.add-review-section h2 {
     font-size: 1.5em;
-    margin-bottom: 0.625em;
     color: #333;
-  }
-  
-  #add-review-btn {
+}
+
+#add-review-btn {
+    margin-top: 0.5em;
     padding: 0.75em 1.5em;
     background-color: #333;
     color: #fff;
@@ -258,221 +254,222 @@
     border-radius: 0.25em;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  #add-review-btn:hover {
+}
+
+#add-review-btn:hover {
     background-color: #555;
-  }
-  
-  /* Media Queries */
-  
-  @media (max-width: 523px) {
+}
+
+/* Media Queries */
+
+@media (max-width: 523px) {
     header {
-      padding: 0.625em 0;
+        padding: 0.625em 0;
     }
-  
+
     .logo {
-      width: 4rem;
+        width: 4rem;
     }
-  
+
     nav {
-      padding: 0 5%;
+        padding: 0 5%;
     }
-  
+
     main {
-      padding: 1.25em 5%;
+        padding: 1.25em 5%;
     }
-  
+
     .hero {
-      padding: 2.5em;
+        padding: 2.5em;
     }
-  
+
     .hero h1 {
-      font-size: 1.5em;
-      margin-bottom: 1em;
+        font-size: 1.5em;
+        margin-bottom: 1em;
     }
-  
+
     .hero p {
-      font-size: 1em;
+        font-size: 1em;
     }
-  
+
     .sort-bar {
-      margin-bottom: 1em;
+        margin-bottom: 1em;
     }
-  
+
     table {
-      font-size: 0.875em;
+        font-size: 0.875em;
     }
-  
-    th, td {
-      padding: 0.625em;
+
+    th,
+    td {
+        padding: 0.625em;
     }
-  
+
     .popup-content {
-      padding: 2em;
-      max-width: 20em;
+        padding: 2em;
+        max-width: 20em;
     }
-  
+
     .popup-content h2 {
-      font-size: 1.25em;
-      margin-bottom: 1em;
+        font-size: 1.25em;
+        margin-bottom: 1em;
     }
-  
+
     .popup-content form input {
-      margin-bottom: 0.5em;
-      padding: 0.5em;
+        margin-bottom: 0.5em;
+        padding: 0.5em;
     }
-  
+
     .popup-content form button {
-      padding: 0.5em 1em;
-      font-size: 0.875em;
+        padding: 0.5em 1em;
+        font-size: 0.875em;
     }
-  
+
     .close-popup {
-      top: 0.5em;
-      right: 0.5em;
-      font-size: 1em;
+        top: 0.5em;
+        right: 0.5em;
+        font-size: 1em;
     }
-  
+
     .subscribe-section {
-      padding: 1em;
+        padding: 1em;
     }
-  
+
     .subscribe-section h2 {
-      font-size: 1.25em;
-      margin-bottom: 0.5em;
+        font-size: 1.25em;
+        margin-bottom: 0.5em;
     }
-  
+
     #subscribe-form input[type="email"] {
-      padding: 0.625em;
-      width: 15em;
-      margin-right: 0.5em;
+        padding: 0.625em;
+        width: 15em;
+        margin-right: 0.5em;
     }
-  
+
     #subscribe-form button {
-      padding: 0.625em 1.25em;
-      font-size: 0.875em;
+        padding: 0.625em 1.25em;
+        font-size: 0.875em;
     }
-  
+
     .sort-bar label {
-      margin-right: 0.5em;
+        margin-right: 0.5em;
     }
-  
+
     #sort-select {
-      padding: 0.5em;
+        padding: 0.5em;
     }
-  
+
     .add-review-section h2 {
-      font-size: 1.25em;
-      margin-bottom: 0.5em;
+        font-size: 1.25em;
+        margin-bottom: 0.5em;
     }
-  
+
     #add-review-btn {
-      padding: 0.625em 1.25em;
-      font-size: 0.875em;
+        padding: 0.625em 1.25em;
+        font-size: 0.875em;
     }
-  }
-  
-  @media (max-width: 457px) {
+}
+
+@media (max-width: 457px) {
     header {
-      padding: 0.625em 0;
+        padding: 0.625em 0;
     }
-  
+
     .logo {
-      width: 3.5rem;
+        width: 3.5rem;
     }
-  
+
     nav {
-      padding: 0 3%;
+        padding: 0 3%;
     }
-  
+
     main {
-      padding: 1em 3%;
+        padding: 1em 3%;
     }
-  
+
     .hero {
-      padding: 2em;
+        padding: 2em;
     }
-  
+
     .hero h1 {
-      font-size: 1.25em;
-      margin-bottom: 0.75em;
+        font-size: 1.25em;
+        margin-bottom: 0.75em;
     }
-  
+
     .hero p {
-      font-size: 0.875em;
+        font-size: 0.875em;
     }
-  
+
     table {
-      font-size: 0.75em;
+        font-size: 0.75em;
     }
-  
-    th, td {
-      padding: 0.5em;
+
+    th,
+    td {
+        padding: 0.5em;
     }
-  
+
     .popup-content {
-      padding: 1.5em;
-      max-width: 16em;
+        padding: 1.5em;
+        max-width: 16em;
     }
-  
+
     .popup-content h2 {
-      font-size: 1.125em;
-      margin-bottom: 0.75em;
+        font-size: 1.125em;
+        margin-bottom: 0.75em;
     }
-  
+
     .popup-content form input {
-      margin-bottom: 0.375em;
-      padding: 0.375em;
+        margin-bottom: 0.375em;
+        padding: 0.375em;
     }
-  
+
     .popup-content form button {
-      padding: 0.375em 0.75em;
-      font-size: 0.75em;
+        padding: 0.375em 0.75em;
+        font-size: 0.75em;
     }
-  
+
     .close-popup {
-      top: 0.375em;
-      right: 0.375em;
-      font-size: 0.875em;
+        top: 0.375em;
+        right: 0.375em;
+        font-size: 0.875em;
     }
-  
+
     .subscribe-section {
-      padding: 0.75em;
+        padding: 0.75em;
     }
-  
+
     .subscribe-section h2 {
-      font-size: 1.125em;
-      margin-bottom: 0.375em;
+        font-size: 1.125em;
+        margin-bottom: 0.375em;
     }
-  
+
     #subscribe-form input[type="email"] {
-      padding: 0.5em;
-      width: 12em;
-      margin-right: 0.375em;
+        padding: 0.5em;
+        width: 12em;
+        margin-right: 0.375em;
     }
-  
+
     #subscribe-form button {
-      padding: 0.5em 1em;
-      font-size: 0.75em;
+        padding: 0.5em 1em;
+        font-size: 0.75em;
     }
-  
+
     .sort-bar label {
-      margin-right: 0.375em;
+        margin-right: 0.375em;
     }
-  
+
     #sort-select {
-      padding: 0.375em;
+        padding: 0.375em;
     }
-  
+
     .add-review-section h2 {
-      font-size: 1.125em;
-      margin-bottom: 0.375em;
+        font-size: 1.125em;
+        margin-bottom: 0.375em;
     }
-  
+
     #add-review-btn {
-      padding: 0.5em 1em;
-      font-size: 0.75em;
+        padding: 0.5em 1em;
+        font-size: 0.75em;
     }
-  }
-  
+}
